[package]
name = "sc2-quickproto-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pb-rs = {git = "https://github.com/danielvschoor/quick-protobuf", optional=true}

[dependencies]
quick-protobuf = {git = "https://github.com/danielvschoor/quick-protobuf"}


